--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     padding-top: 100px;
 }
 .wrap {
-    width: 300px;
+    width: 400px;
     margin: auto;
 }
 #input {
@@ -34,13 +34,26 @@ ul {
 .btn {
     background-color: rgb(3, 80, 131);
     border: none;
-    color: blanchedalmond;
+    color: rgb(255, 255, 255);
     margin-left: 15px;
     padding: 10px;
     cursor: pointer;
     position: relative;
     z-index: 10;
     border-radius: 5px;
+    font-size: 12px;
+}
+.btnDell {
+    background-color: rgb(158, 4, 63);
+    border: none;
+    color: rgb(255, 255, 255);
+    margin-left: 15px;
+    padding: 10px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+    border-radius: 5px;
+    font-size: 12px;
 }
 .li {
     padding: 4px 8px;
@@ -48,8 +61,8 @@ ul {
     border: 3px solid rgb(177, 177, 177);
     margin: 10px 0;
     border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 60% 20% 20%;
     align-items: center;
     position: relative;
     z-index: 5;
@@ -63,7 +76,5 @@ ul {
     opacity: .3;
 }
 .li-active .btn {
-    color: #555;
-    text-decoration: line-through;
-    background-color: rgb(0, 0, 0);
+    color: rgb(114, 114, 114);
 }
